--- a/NodumVisualCalculator/Components/DropdownElement.razor
+++ b/NodumVisualCalculator/Components/DropdownElement.razor
@@ -3,6 +3,9 @@
     public Dropdown Dropdown { get; set; }
 
     [Parameter]
+    public bool Showed { get; set; } = true;
+
+    [Parameter]
     public bool HideOnClick { get; set; }
 
     [Parameter]
